--- a/index.html
+++ b/index.html
@@ -3,8 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="css/estilos.css">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+
   </head>
   <body>
+    <div id="contenido">
 
+
+        <header id="cabecera">
+          <h1>Comenzando con la fotografía</h1>
+          <nav>
+            <a href="#">Inicio</a>
+            <a href="#">Paisajes</a>
+            <a href="#">Retratos</a>
+          </nav>
+        </header>
+        <section>
+            <div id="imagen_central">
+              <img src="imagenes/paisaje1.jpg" alt="">
+            </div>
+            <div id="contenedor">
+                <div id="bloque1">
+                  <img src="imagenes/paisaje2.jpg" alt="">
+                </div>
+                <div id="bloque2">
+                  <img src="imagenes/paisaje3.jpg" alt="">
+                </div>
+            </div>
+        </section>
+    </div>
   </body>
 </html>
