--- a/index.html
+++ b/index.html
@@ -33,5 +33,36 @@
             </div>
         </section>
     </div>
+    <footer>
+      <div id="contacto">
+        <h3>Contacto</h3>
+        <ul>
+          <li>diazamayajoseantonio@gmail.com</li>
+          <li>Jr Sao Paulo 2606 SMP</li>
+          <li>984775538</li>
+        </ul>
+      </div>
+      <div id="terminos">
+        <h3>Térmninos</h3>
+        <p>Mantenemos este sitio web como un servicio para sus visitantes y sus clientes. Al utilizar este sitio web o contratar cualquiera de nuestros servicios, usted acepta atenerse a los Términos y Condiciones de nuestra firma</p>
+      </div>
+      <div id="redes">
+        <h3>Redes Sociales</h3>
+          <ul>
+            <li> <a href="https://twitter.com/?lang=es">Twitter</a> </li>
+            <li> <a href="https://es-la.facebook.com/">Facebook</a></li>
+            <li> <a href="https://www.instagram.com/?hl=es-la">Instagram</a> </li>
+          </ul>
+      </div>
+      <div id="derechos">
+        <h3>Derechos</h3>
+        <ul>
+          <li>Jose Antonio</li>
+          <li>Diaz amaya</li>
+          <li>CopyRight</li>
+          <li>2018</li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
