--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <header id="cabecera">
           <h1>Comenzando con la fotografía</h1>
           <nav>
-            <a href="#">Inicio</a>
-            <a href="#">Paisajes</a>
-            <a href="#">Retratos</a>
+            <a href="retratos.html" style="text-decoration:underline">Retratos</a>
+            <a href="paisajes.html" style="text-decoration:underline">Paisajes</a>
+            <a href="index.html">Inicio</a>
           </nav>
         </header>
         <section>
