--- a/paisajes.html
+++ b/paisajes.html
@@ -20,23 +20,23 @@
           </header>
           <section>
               <div id="contenedor2">
-                  <div class="bloque1p" style="background-color:red">
-                    <img src="imagenes/imagen12.jpg" alt="">1
+                  <div class="bloque1p">
+                    <img style="-webkit-filter:blur(10px)" src="imagenes/imagen1.jpg" alt="">
                   </div>
-                  <div class="bloque2p" style="background-color:yellow">
-                    <img src="imagenes/imagen22.jpg" alt="">2
+                  <div class="bloque2p">
+                    <img style="-webkit-filter:grayscale(100%)" src="imagenes/imagen2.jpg" alt="">
                   </div>
-                  <div class="bloque3p" style="background-color:green">
-                    <img src="imagenes/imagen32.jpg" alt="">3
+                  <div class="bloque3p">
+                    <img src="imagenes/imagen3.jpg" alt="">
                   </div>
-                  <div class="bloque4p" style="background-color:gray">
-                    <img src="imagenes/imagen42.jpg" alt="">4
+                  <div class="bloque4p">
+                    <img style="-webkit-filter:grayscale(100%)" src="imagenes/imagen4.jpg" alt="">
                   </div>
-                  <div class="bloque5p" style="background-color:orange">
-                    <img src="imagenes/imagen52.jpg" alt="">5
+                  <div class="bloque5p">
+                    <img style="-webkit-filter:sepia(90%)" src="imagenes/imagen5.jpg" alt="">
                   </div>
-                  <div class="bloque6p" style="background-color:blue">
-                    <img src="imagenes/imagen62.jpg" alt="">6
+                  <div class="bloque6p">
+                    <img style="-webkit-filter:grayscale(100%)" src="imagenes/imagen6.jpg" alt="">
                   </div>
               </div>
           </section>
