--- a/retratos.html
+++ b/retratos.html
@@ -5,71 +5,73 @@
     <title></title>
     <link rel="stylesheet" href="css/estilos.css">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+<meta name="viewport" content="width=device-width, user-scalable=no">
   </head>
     <body>
       <div id="contenido">
 
 
           <header id="cabecera">
-            <h1>Paisajes</h1>
+            <h1>Comenzando con la fotografía</h1>
             <nav>
-              <a href="retratos.html">Retratos</a>
-              <a href="paisajes.html"  style="text-decoration:underline">Paisajes</a>
-              <a href="index.html" style="text-decoration:underline">Inicio</a>
+              <ul>
+                <li>
+                  <a href="index.html">Inicio</a>
+                </li>
+                <li>
+                  <a href="paisajes.html">Paisajes</a>
+                </li>
+                <li class="actual">Retratos</li>
+              </ul>
             </nav>
           </header>
-          <section>
-              <div id="contenedor2">
-                  <div class="bloque1p">
-                    <img style="-webkit-filter:blur(10px)" src="imagenes/retrato1.jpg" alt="">
+              <div id="galery">
+                <div class="ma">
+                  <div class="inter">
+                    <img src="imagenes/retrato.jpg" alt="imagen de retratos" class="blur">
                   </div>
-                  <div class="bloque2p">
-                    <img style="-webkit-filter:grayscale(100%)" src="imagenes/retrato2.jpg" alt="">
+                  <div class="inter">
+                    <img src="imagenes/retrato.jpg" alt="imagen de retratos" class="gris">
                   </div>
-                  <div class="bloque3p">
-                    <img src="imagenes/retrato3.jpg" alt="">
+                  <div class="inter">
+                    <img src="imagenes/retrato.jpg" alt="imagen de retratos" class="sepia">
                   </div>
-                  <div class="bloque4p">
-                    <img style="-webkit-filter:grayscale(100%)" src="imagenes/retrato4.jpg" alt="">
+                </div>
+                <div class="mi">
+                  <div class="inter">
+                    <img src="imagenes/retrato.jpg" alt="imagen de retratos" class="gris">
                   </div>
-                  <div class="bloque5p">
-                    <img style="-webkit-filter:sepia(90%)" src="imagenes/retrato5.jpg" alt="">
+                  <div class="inter">
+                    <img src="imagenes/retrato.jpg" alt="imagen de retratos">
                   </div>
-                  <div class="bloque6p">
-                    <img style="-webkit-filter:grayscale(100%)" src="imagenes/retrato6.jpg" alt="">
+                  <div class="inter">
+                    <img src="imagenes/retrato.jpg" alt="imagen de retratos" class="gris">
                   </div>
+                </div>
               </div>
-          </section>
-      </div>
       <footer>
-        <div id="contacto">
-          <h3>Contacto</h3>
-          <ul>
-            <li>diazamayajoseantonio@gmail.com</li>
-            <li>Jr Sao Paulo 2606 SMP</li>
-            <li>984775538</li>
-          </ul>
+        <div>
+          <h1>Contacto</h1>
+            <p>diazamayajoseantonio@gmail.com</p>
+            <p>Jr Sao Paulo 2606 SMP</p>
+            <p>984775538</p>
         </div>
-        <div id="terminos">
-          <h3>Térmninos</h3>
+        <div>
+          <h1>Térmninos</h1>
           <p>Mantenemos este sitio web como un servicio para sus visitantes y sus clientes. Al utilizar este sitio web o contratar cualquiera de nuestros servicios, usted acepta atenerse a los Términos y Condiciones de nuestra firma</p>
         </div>
-        <div id="redes">
-          <h3>Redes Sociales</h3>
-            <ul>
-              <li> <a href="https://twitter.com/?lang=es">Twitter</a> </li>
-              <li> <a href="https://es-la.facebook.com/">Facebook</a></li>
-              <li> <a href="https://www.instagram.com/?hl=es-la">Instagram</a> </li>
-            </ul>
+        <div>
+          <h1>Redes Sociales</h1>
+              <p> <a href="https://twitter.com/?lang=es">Twitter</a> </p>
+              <p> <a href="https://es-la.facebook.com/">Facebook</a></p>
+              <p> <a href="https://www.instagram.com/?hl=es-la">Instagram</a> </p>
         </div>
-        <div id="derechos">
-          <h3>Derechos</h3>
-          <ul>
-            <li>Jose Antonio</li>
-            <li>Diaz amaya</li>
-            <li>CopyRight</li>
-            <li>2018</li>
-          </ul>
+        <div>
+          <h1>Derechos</h1>
+            <p>Jose Antonio</p>
+            <p>Diaz amaya</p>
+            <p>CopyRight</p>
+            <p>2018</p>
         </div>
       </footer>
   </body>
